--- a/Digital Clock/style.css
+++ b/Digital Clock/style.css
@@ -1,1 +1,20 @@
-
+body{
+    background-color: rgb(51, 47, 47);
+    color: white;
+}
+#clock{
+    height: 50px;
+    width: 200px;
+    background-color: rgb(24, 72, 113);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#center{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+}
